--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
         $('button').on("click", function () {
             var p = $(this).data('name');
-            var queryURL = "http://api.giphy.com/v1/gifs/search?q=" + p + "&api_key=dc6zaTOxFJmzC&limit=10";
+            var queryURL = "https://api.giphy.com/v1/gifs/search?q=" + p + "&api_key=dc6zaTOxFJmzC&limit=10";
 
 
             $.ajax({
