--- a/index.html
+++ b/index.html
@@ -1,67 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js">
+    </script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Elsie|Ewert|Fascinate+Inline|Faster+One|Fredericka+the+Great"
-          rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
-          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"> </script>
-
+    <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Elsie|Ewert|Fascinate+Inline|Faster+One|Fredericka+the+Great" rel="stylesheet">
     <meta charset="UTF-8">
     <title>GifTastic</title>
 </head>
+
 <body>
-
-<div class="container">
-    <div class="jumbotron"> GifTastic, It's Fantastic!</div>
-
-
-    <div class="row" align="center">
-        <div class="panel panel-default" align="left">
-            <div id="startingButtons" >
-                <div class="clear"></div>
+    <div class="container">
+        <div class="jumbotron"> GifTastic, It's Fantastic!</div>
+        <div class="row" align="center">
+            <div class="panel panel-default" align="left">
+                <div id="startingButtons">
+                    <div class="clear"></div>
+                </div>
+                <div id="addButtons"></div>
             </div>
-
-            <div id="addButtons"></div>
-        </div>
         </div>
         <br>
-
-
         <div class="row" align="center">
             <form id="userInput" class="form-inline">
                 <label for="userInput"></label>
                 <input type="text" id="user-Input" class=" form-control">
-                <input id="grabUserInput" type="submit" value="Add!"
-                       class="btn btn-success">
+                <input id="grabUserInput" type="submit" value="Add!" class="btn btn-success">
             </form>
         </div>
-
-
-
-    <br>
-
-    <div class="row" align="center">
-
-        <div class="panel panel-default ">
-            <h1>Le Gifs</h1>
-            <div id="gifsAppearHere">
+        <br>
+        <div class="row" align="center">
+            <div class="panel panel-default ">
+                <h1>Le Gifs</h1>
+                <div id="gifsAppearHere">
+                </div>
             </div>
         </div>
     </div>
-</div>
-
-
-<script src='http://code.jquery.com/jquery-2.1.3.min.js'></script>
-<script type="text/javascript">
-
+    <script src='http://code.jquery.com/jquery-2.1.3.min.js'></script>
+    <script type="text/javascript">
     var topics = ["Bobs Burgers", "Galaxies", "Flowers", "Fall"];
 
     function renderButtons() {
@@ -80,7 +63,7 @@
     }
 
     //adding gify buttons from user input
-    $('#grabUserInput').on('click', function () {
+    $('#grabUserInput').on('click', function() {
 
         var gify = $('#user-Input').val().trim();
 
@@ -97,7 +80,7 @@
     function addGif() {
 
 
-        $('button').on("click", function () {
+        $('button').on("click", function() {
             var p = $(this).data('name');
             var queryURL = "https://api.giphy.com/v1/gifs/search?q=" + p + "&api_key=dc6zaTOxFJmzC&limit=10";
 
@@ -108,114 +91,96 @@
                 method: 'GET'
             })
 
-                    .done(function (response) {
-                        var results = response.data;
-                        console.log(response);
+            .done(function(response) {
+                var results = response.data;
+                console.log(response);
 
 
-                        for (var i = 0; i < results.length; i++) {
-                            var gifDiv = $('<div class="item">');
-                            var rating = results[i].rating;
-                            var p = $('<p>').text("Rating: " + rating);
-                            var img = $('<img>');
-                            img.attr('src', results[i].images.fixed_height.url);
-                            img.attr('data-still', results[i].images.fixed_height_still.url);
-                            img.attr('data-animate', results[i].images.fixed_height.url);
-                            img.attr('data-state', 'still');
-                            img.attr('class', "gifImages");
+                for (var i = 0; i < results.length; i++) {
+                    var gifDiv = $('<div class="item">');
+                    var rating = results[i].rating;
+                    var p = $('<p>').text("Rating: " + rating);
+                    var img = $('<img>');
+                    img.attr('src', results[i].images.fixed_height.url);
+                    img.attr('data-still', results[i].images.fixed_height_still.url);
+                    img.attr('data-animate', results[i].images.fixed_height.url);
+                    img.attr('data-state', 'still');
+                    img.attr('class', "gifImages");
 
 
-                            gifDiv.append(p);
-                            gifDiv.append(img);
-                            $('#gifsAppearHere').prepend(gifDiv);
+                    gifDiv.append(p);
+                    gifDiv.append(img);
+                    $('#gifsAppearHere').prepend(gifDiv);
 
 
-                        }
-                        $('.item').children('img').on('click', function () {
-                            var state = $(this).attr('data-state');
+                }
+                $('.item').children('img').on('click', function() {
+                    var state = $(this).attr('data-state');
 
-                            if (state == 'still') {
-                                $(this).attr('src', $(this).data('animate'));
-                                $(this).attr('data-state', 'animate');
-                            } else {
-                                $(this).attr('src', $(this).data('still'));
-                                $(this).attr('data-state', 'still');
-                            }
-                        });
+                    if (state == 'still') {
+                        $(this).attr('src', $(this).data('animate'));
+                        $(this).attr('data-state', 'animate');
+                    } else {
+                        $(this).attr('src', $(this).data('still'));
+                        $(this).attr('data-state', 'still');
+                    }
+                });
 
 
-                    });
+            });
 
 
         });
 
 
     }
-
-
-</script>
+    </script>
 </body>
+
 </html>
 <style>
-
-
-    body {
+body {
     margin-left: 60px;
-        height: auto;
-        background-color: #F4E0E6;
-        width: 600px;
-    }
-
-    .item {
-
-    }
-
-    .jumbotron {
-
-        background-image: url("headerGifs.jpg" );
-        background-size: 100%;
-        background-position: center;
-        font-size: 45pt;
-        text-align: center;
-
-        /*font-family: 'Berkshire Swash', cursive;*/
-        /*font-family: 'Ewert', cursive;*/
-        /*font-family: 'Fascinate Inline', cursive;*/
-        /*font-family: 'Faster One', cursive;*/
-        font-family: 'Fredericka the Great', cursive;
-
-    }
-
-    .panel {
-        width: 600px;
-        height: auto;
-        background-color: #A0C689;
-
-    }
-
-    h1 {
-
-        font-family: 'Fredericka the Great', cursive;
-    }
-
-    .btn {
-        font-family: 'Fredericka the Great', cursive;
-        background:#A0C689;
-        border: lightgray;
-        color: black;
-        font-size: 16px;
-
-        
-
-    }
-
-p{
-    font-style: italic;
-    font-family: 'Fredericka the Great', cursive;
-
+    height: auto;
+    background-color: #F4E0E6;
+    width: 600px;
 }
 
+.item {}
 
+.jumbotron {
+    background-image: url("headerGifs.jpg");
+    background-size: 100%;
+    background-position: center;
+    font-size: 45pt;
+    text-align: center;
+    /*font-family: 'Berkshire Swash', cursive;*/
+    /*font-family: 'Ewert', cursive;*/
+    /*font-family: 'Fascinate Inline', cursive;*/
+    /*font-family: 'Faster One', cursive;*/
+    font-family: 'Fredericka the Great', cursive;
+}
 
+.panel {
+    width: 600px;
+    height: auto;
+    background-color: #A0C689;
+}
 
+h1 {
+    font-family: 'Fredericka the Great', cursive;
+}
+
+.btn {
+    font-family: 'Fredericka the Great', cursive;
+    background: #A0C689;
+    border: lightgray;
+    color: black;
+    font-size: 16px;
+}
+
+p {
+    font-style: italic;
+    font-family: 'Fredericka the Great', cursive;
+}
 </style>
