--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 
 <head>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Optional theme -->
@@ -55,6 +54,7 @@
         for (i = 0; i < topics.length; i++) {
             var a = $('<button>');
             a.addClass('#topic');
+            a.addClass('btn btn-primary')
             a.attr('data-name', topics[i]);
             a.text(topics[i]);
             $('#startingButtons').append(a);
@@ -168,11 +168,17 @@ body {
     background-color: #A0C689;
 }
 
+.btn {
+    font-family: 'Fredericka the Great', cursive;
+    background: #A0C689;
+    border: lightgray;
+    color: black;
+    font-size: 16px;
+}
+
 h1 {
     font-family: 'Fredericka the Great', cursive;
 }
-
-
 
 p {
     font-style: italic;
